hphp/test/zend/bad/ext/spl/tests/SplFileObject_key_error002.php
<?php
//line 2
//line 3
//line 4
//line 5
$s = new SplFileObject(__FILE__);

$s->seek(120);
$s->next();
var_dump($s->key());
var_dump($s->valid());
?>